Use CSS variables to set vh (Avoid 100vh On Mobile Web)

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,8 @@
 .main-route {
   width: 100%;
   height: 100%;
+  height: 100vh;
+  height: vh(100);
 }
 
 .main-route {
