--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -4,7 +4,10 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+
+  height: 100%;
+  height: 100vh;
+  height: vh(100);
 
   &__logo {
     @include z-index(logo);
@@ -34,7 +37,8 @@
 
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  height: vh(100);
 
   background: url("../../assets/header-mobile.jpg") center/cover no-repeat;
 
@@ -88,5 +92,6 @@
 
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  height: vh(100);
 }
