--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -15,8 +15,12 @@
 
 .spinner {
   position: fixed;
+
   width: 100vw;
+  height: 100%;
   height: 100vh;
+  height: vh(100);
+
   margin: 0 auto;
   display: flex;
   align-items: start;
