--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,8 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  height: 100vh;
+  height: vh(100);
   top: 0;
   left: 0;
   padding: 0;
