--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -100,3 +100,7 @@ $z-index: (
 @function pxToRems($px) {
 	@return 0rem + $px / 16;
 }
+
+@function vh($quantity) {
+  @return calc(var(--vh, 1vh) * #{$quantity});
+}
