--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -141,7 +141,9 @@ dd {
 
 /* Set core body defaults */
 body {
+  min-height: 100%;
   min-height: 100vh;
+  min-height: vh(100);
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
